--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -5,7 +5,12 @@ body {
   font:14px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
   color:#333;
   font-weight:300;
-  background-color: #f8f9f3;
+  background-color: rgba(248,249,243,0.8);
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -moz-font-feature-settings: "liga" on;
+
 }
 
 h1, h2, h3, h4, h5, h6 {
