--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,11 +1,11 @@
-@import url(https://fonts.googleapis.com/css?family=Lato:300italic,700italic,300,700);
+@import url(https://fonts.googleapis.com/css?family=Fira+Sans:300italic,700italic,300,400,700);
 
 body {
   padding:50px;
-  font:14px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font:14px/1.5 Fira Sans, "Helvetica Neue", Helvetica, Arial, sans-serif;
   color:#333;
   font-weight:300;
-  background-color: rgba(248,249,243,0.8);
+  /*background-color: rgba(248,249,243,0.8);*/
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
