--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,8 +1,10 @@
-@import url(https://fonts.googleapis.com/css?family=Fira+Sans:300italic,700italic,300,400,700);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:300italic,700italic,300,400,700);
+/*@import url(https://fonts.googleapis.com/css?family=Fira+Sans:300italic,700italic,300,400,700);*/
 
 body {
   padding:50px;
-  font:14px/1.5 Fira Sans, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  /*font:14px/1.5 Fira Sans, "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+  font:14px/1.5 "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color:#333;
   font-weight:300;
   text-rendering: optimizeLegibility;
