--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,6 +1,10 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:300italic,700italic,300,400,700);
 /*@import url(https://fonts.googleapis.com/css?family=Fira+Sans:300italic,700italic,300,400,700);*/
 
+html {
+    background: #faf8ef;
+}
+
 body {
   padding:50px;
   /*font:14px/1.5 Fira Sans, "Helvetica Neue", Helvetica, Arial, sans-serif;*/
