--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -2,7 +2,7 @@
 /*@import url(https://fonts.googleapis.com/css?family=Fira+Sans:300italic,700italic,300,400,700);*/
 
 html {
-    background: #faf8ef;
+    /*background: #faf8ef;*/
 }
 
 body {
