--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -16,6 +16,10 @@ body {
   -moz-font-feature-settings: "liga" on;
 }
 
+.text-muted {
+    color: #CFCFCF;
+}
+
 h1, h2, h3, h4, h5, h6 {
   color:#222;
   margin:0 0 20px;
