--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,20 +1,21 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:300italic,700italic,300,400,700);
-/*@import url(https://fonts.googleapis.com/css?family=Fira+Sans:300italic,700italic,300,400,700);*/
-
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700);
 html {
-    /*background: #faf8ef;*/
 }
 
 body {
-  padding:50px;
-  font:14px/1.5 "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color:#333;
-  font-weight:300;
+  padding: 50px;
+  font: 14px/1.5 "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 400;
+  letter-spacing: 0;
+  font-style: normal;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -moz-font-feature-settings: "liga" on;
+  color: rgba(0,0,0,.7);
+  line-height: 1.4;
 }
+
 
 .text-muted {
     color: #CFCFCF;
@@ -27,6 +28,7 @@ h1, h2, h3, h4, h5, h6 {
 
 p, ul, ol, table, pre, dl {
   margin:0 0 20px;
+  list-style: none;
 }
 
 h1, h2, h3 {
