--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -4,7 +4,7 @@ html {
 
 body {
   padding: 50px;
-  font: 14px/1.5 "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 14px/1.5 "Open Sans", sans-serif;
   font-weight: 400;
   letter-spacing: 0;
   font-style: normal;
@@ -12,8 +12,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -moz-font-feature-settings: "liga" on;
-  color: rgba(0,0,0,.7);
-  line-height: 1.4;
+  color: #333;
 }
 
 
