--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,25 +1,36 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700');
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display:900');
+
 html {
+}
+
+header {
+    width: 270px;
+    float: left;
+    position: fixed;
 }
 
 body {
   padding: 50px;
-  font: 14px/1.5 -apple-system, BlinkMacSystemFont, Avenir, "Avenir Next", "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-weight: 400;
   font-style: normal;
+  font-size: 14.5px;
+  line-height: 1.58;
+  letter-spacing: -.003em;
   text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  -moz-font-feature-settings: "liga" on;
-  color: #333;
-}
-
-.text-muted {
-    color: #CFCFCF;
+  -moz-font-feature-settings: 'liga' 1, 'onum' 1, 'kern' 1;
+  color: rgba(0,0,0,.8);
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color: #333;
+  font-family: "Playfair Display", serif;
   margin:0 0 20px;
+  font-weight: 900;
+  font-size: 25px;
+  letter-spacing: .01rem;
+
 }
 
 p, ul, ol, table, pre, dl {
@@ -27,30 +38,13 @@ p, ul, ol, table, pre, dl {
   list-style: none;
 }
 
-h1, h2, h3 {
-  line-height:1.1;
-}
-
-h1 {
-  font-size:28px;
-}
-
-h2 {
-  color:#393939;
-}
-
-h3, h4, h5, h6 {
-  color:#494949;
-}
-
 a {
-  color:#333;
+  color:rgba(0,0,0,.8);
   font-weight:400;
 }
 
 a small {
-  font-size:11px;
-  color:#333;
+  color: rgba(0,0,0,.8);
   margin-top:-0.6em;
   display:block;
 }
@@ -61,7 +55,7 @@ a small {
 }
 
 blockquote {
-  border-left:1px solid #e5e5e5;
+  border-left:1px solid rgba(0,0,0,.8);
   margin:0;
   padding:0 0 0 20px;
   font-style:italic;
@@ -69,7 +63,7 @@ blockquote {
 
 code, pre {
   font-family:Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal;
-  color:#333;
+  color:rgba(0,0,0,.8);
   font-size:12px;
 }
 
@@ -77,7 +71,7 @@ pre {
   padding:8px 15px;
   background: #f8f8f8;
   border-radius:5px;
-  border:1px solid #e5e5e5;
+  border:1px solid rgba(0,0,0,.8);
   overflow-x: auto;
 }
 
@@ -89,7 +83,7 @@ table {
 th, td {
   text-align:left;
   padding:5px 10px;
-  border-bottom:1px solid #e5e5e5;
+  border-bottom:1px solid rgba(0,0,0,.8);
 }
 
 dt {
@@ -105,70 +99,6 @@ img {
   max-width:100%;
 }
 
-header {
-  width:270px;
-  float:left;
-  position:fixed;
-}
-
-header ul {
-  list-style:none;
-  height:40px;
-
-  padding:0;
-
-  background: #eee;
-  background: -moz-linear-gradient(top, #f8f8f8 0%, #dddddd 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f8f8f8), color-stop(100%,#dddddd));
-  background: -webkit-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-  background: -o-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-  background: -ms-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-  background: linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-
-  border-radius:5px;
-  border:1px solid #d2d2d2;
-  box-shadow:inset #fff 0 1px 0, inset rgba(0,0,0,0.03) 0 -1px 0;
-  width:270px;
-}
-
-header li {
-  width:89px;
-  float:left;
-  border-right:1px solid #d2d2d2;
-  height:40px;
-}
-
-header ul a {
-  line-height:1;
-  font-size:11px;
-  color:#999;
-  display:block;
-  text-align:center;
-  padding-top:6px;
-  height:40px;
-}
-
-strong {
-  color:#222;
-  font-weight:700;
-}
-
-header ul li + li {
-  width:88px;
-  border-left:1px solid #fff;
-}
-
-header ul li + li + li {
-  border-right:none;
-  width:89px;
-}
-
-header ul a strong {
-  font-size:14px;
-  display:block;
-  color:#222;
-}
-
 section {
   width:550px;
   float:right;
@@ -181,7 +111,7 @@ small {
 
 hr {
   border:0;
-  background:#e5e5e5;
+  background:rgba(0,0,0,.8);
   height:1px;
   margin:0 0 20px;
 }
@@ -191,6 +121,9 @@ footer {
   float:left;
   position:fixed;
   bottom:50px;
+  color: rgba(0,0,0,.4);
+  font-size: 13px;
+
 }
 
 @media print, screen and (max-width: 960px) {
@@ -211,7 +144,7 @@ footer {
   }
 
   section {
-    border:1px solid #e5e5e5;
+    border:1px solid rgba(0,0,0,.1);
     border-width:1px 0;
     padding:20px 0;
     margin:0 0 20px;
@@ -260,6 +193,6 @@ footer {
   body {
     padding:0.4in;
     font-size:12pt;
-    color:#444;
+    color:rgba(0,0,0,.8);
   }
 }
