--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -12,18 +12,20 @@ header {
 
 body {
   padding: 50px;
-  font-family: "Open Sans", sans-serif;
-  font-weight: 400;
-  font-style: normal;
+  font-family: Open Sans,Segoe UI,sans-serif;
   font-size: 14.5px;
+  font-weight:400;
+  font-style:normal;
   line-height: 1.58;
   letter-spacing: -.003em;
-  text-rendering: optimizeLegibility;
-  -moz-osx-font-smoothing: grayscale;
-  -moz-font-feature-settings: 'liga' 1, 'onum' 1, 'kern' 1;
+  -webkit-text-size-adjust:100%;
+  -webkit-font-smoothing:antialiased;
+  -moz-osx-font-smoothing:grayscale;
+  text-rendering:optimizeLegibility;
+  font-feature-settings:"pnum";
+  font-variant-numeric:proportional-nums
   color: rgba(0,0,0,.8);
 }
-
 h1, h2, h3, h4, h5, h6 {
   font-family: "Playfair Display", serif;
   margin:0 0 20px;
