--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700');
-@import url('https://fonts.googleapis.com/css?family=Playfair+Display:900');
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display:700,900');
 
 html {
 }
@@ -10,13 +10,25 @@ header {
     position: fixed;
 }
 
+.avatar {
+  -moz-force-broken-image-icon: 1;
+  border-radius: 50%;
+  height: 50%;
+  width: 50%;
+  left: 0;
+  top: 0;
+  border-radius: 50%;
+  box-shadow: 0 6px 12px rgba(50,50,93,.1),0 3px 6px rgba(0,0,0,.08);
+  margin-right: 20px;
+}
+
 body {
   padding: 50px;
-  font-family: Open Sans,Segoe UI,sans-serif;
-  font-size: 14.5px;
+  font-family:Open Sans,Segoe UI,sans-serif;
+  font-size:14.5px;
   font-weight:400;
   font-style:normal;
-  line-height: 1.58;
+  line-height:1.58;
   letter-spacing: -.003em;
   -webkit-text-size-adjust:100%;
   -webkit-font-smoothing:antialiased;
@@ -26,13 +38,13 @@ body {
   font-variant-numeric:proportional-nums
   color: rgba(0,0,0,.8);
 }
+
 h1, h2, h3, h4, h5, h6 {
   font-family: "Playfair Display", serif;
   margin:0 0 20px;
   font-weight: 900;
-  font-size: 25px;
+  font-size: 21px;
   letter-spacing: .01rem;
-
 }
 
 p, ul, ol, table, pre, dl {
