--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -40,7 +40,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Playfair Display", serif;
+  font-family:Playfair Display, serif;
   margin:0 0 20px;
   font-weight: 900;
   font-size: 21px;
