--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700');
-@import url('https://fonts.googleapis.com/css?family=Playfair+Display:700,900');
 
 html {
 }
@@ -24,27 +23,26 @@ header {
 
 body {
   padding: 50px;
-  font-family:Open Sans,Segoe UI,sans-serif;
-  font-size:14.5px;
+  font-family:Open Sans,sans-serif;
+  font-size:.9rem;
   font-weight:400;
+  letter-spacing:-0.002rem;
   font-style:normal;
   line-height:1.58;
-  letter-spacing: -.003em;
+  color: rgba(0,0,0,.8);
   -webkit-text-size-adjust:100%;
   -webkit-font-smoothing:antialiased;
   -moz-osx-font-smoothing:grayscale;
   text-rendering:optimizeLegibility;
   font-feature-settings:"pnum";
-  font-variant-numeric:proportional-nums
-  color: rgba(0,0,0,.8);
+  font-variant-numeric:proportional-nums;
+
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family:Playfair Display, serif;
   margin:0 0 20px;
-  font-weight: 900;
-  font-size: 21px;
-  letter-spacing: .01rem;
+  font-weight: 700;
+  font-size: 1.4rem;
 }
 
 p, ul, ol, table, pre, dl {
@@ -54,7 +52,6 @@ p, ul, ol, table, pre, dl {
 
 a {
   color:rgba(0,0,0,.8);
-  font-weight:400;
 }
 
 a small {
@@ -73,12 +70,6 @@ blockquote {
   margin:0;
   padding:0 0 0 20px;
   font-style:italic;
-}
-
-code, pre {
-  font-family:Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal;
-  color:rgba(0,0,0,.8);
-  font-size:12px;
 }
 
 pre {
