--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -4,9 +4,9 @@ html {
 }
 
 header {
-    width: 270px;
-    float: left;
-    position: fixed;
+  width: 270px;
+  float: left;
+  position: fixed
 }
 
 .avatar {
@@ -17,187 +17,204 @@ header {
   left: 0;
   top: 0;
   border-radius: 50%;
-  box-shadow: 0 6px 12px rgba(50,50,93,.1),0 3px 6px rgba(0,0,0,.08);
-  margin-right: 20px;
+  box-shadow: 0 6px 12px rgba(50, 50, 93, .1), 0 3px 6px rgba(0, 0, 0, .08);
+  margin-right: 20px
 }
 
 body {
   padding: 50px;
-  font-family:Open Sans,sans-serif;
-  font-size:.9rem;
-  font-weight:400;
-  letter-spacing:-0.002rem;
-  font-style:normal;
-  line-height:1.58;
-  color: rgba(0,0,0,.8);
-  -webkit-text-size-adjust:100%;
-  -webkit-font-smoothing:antialiased;
-  -moz-osx-font-smoothing:grayscale;
-  text-rendering:optimizeLegibility;
-  font-feature-settings:"pnum";
-  font-variant-numeric:proportional-nums;
-
+  font-family: Open Sans, sans-serif;
+  font-size: .9rem;
+  font-weight: 400;
+  letter-spacing: -0.002rem;
+  font-style: normal;
+  line-height: 1.58;
+  color: rgba(0, 0, 0, .8);
+  -webkit-text-size-adjust: 100%;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+  font-feature-settings: "pnum";
+  font-variant-numeric: proportional-nums
 }
 
 h1, h2, h3, h4, h5, h6 {
-  margin:0 0 20px;
+  margin: 0 0 20px;
   font-weight: 700;
-  font-size: 1.4rem;
+  font-size: 1.4rem
 }
 
 p, ul, ol, table, pre, dl {
-  margin:0 0 20px;
-  list-style: none;
+  margin: 0 0 20px;
+  list-style: none
 }
 
 a {
-  color:rgba(0,0,0,.8);
+  color: rgba(0, 0, 0, .8)
 }
 
 a small {
-  color: rgba(0,0,0,.8);
-  margin-top:-0.6em;
-  display:block;
+  color: rgba(0, 0, 0, .8);
+  margin-top: -0.6em;
+  display: block
 }
 
 .wrapper {
-  width:860px;
-  margin:0 auto;
+  width: 860px;
+  margin: 0 auto
 }
 
 blockquote {
-  border-left:1px solid rgba(0,0,0,.8);
-  margin:0;
-  padding:0 0 0 20px;
-  font-style:italic;
+  border-left: 1px solid rgba(0, 0, 0, .8);
+  margin: 0;
+  padding: 0 0 0 20px;
+  font-style: italic
 }
 
 pre {
-  padding:8px 15px;
+  padding: 8px 15px;
   background: #f8f8f8;
-  border-radius:5px;
-  border:1px solid rgba(0,0,0,.8);
-  overflow-x: auto;
+  border-radius: 5px;
+  border: 1px solid rgba(0, 0, 0, .8);
+  overflow-x: auto
 }
 
 table {
-  width:100%;
-  border-collapse:collapse;
+  width: 100%;
+  border-collapse: collapse
 }
 
 th, td {
-  text-align:left;
-  padding:5px 10px;
-  border-bottom:1px solid rgba(0,0,0,.8);
+  text-align: left;
+  padding: 5px 10px;
+  border-bottom: 1px solid rgba(0, 0, 0, .8)
 }
 
 dt {
-  color:#444;
-  font-weight:700;
+  color: #444;
+  font-weight: 700
 }
 
 th {
-  color:#444;
+  color: #444
 }
 
 img {
-  max-width:100%;
+  max-width: 100%
 }
 
 section {
-  width:550px;
-  float:right;
-  padding-bottom:50px;
+  width: 550px;
+  float: right;
+  padding-bottom: 50px
 }
 
 small {
-  font-size:11px;
+  font-size: 11px
 }
 
 hr {
-  border:0;
-  background:rgba(0,0,0,.8);
-  height:1px;
-  margin:0 0 20px;
+  border: 0;
+  background: rgba(0, 0, 0, .8);
+  height: 1px;
+  margin: 0 0 20px
 }
 
 footer {
-  width:270px;
-  float:left;
-  position:fixed;
-  bottom:50px;
-  color: rgba(0,0,0,.4);
-  font-size: 13px;
-
+  width: 270px;
+  float: left;
+  position: fixed;
+  bottom: 50px;
+  color: rgba(0, 0, 0, .4);
+  font-size: 13px
 }
 
-@media print, screen and (max-width: 960px) {
-
+@media print, screen and (max-width:960px) {
   div.wrapper {
-    width:auto;
-    margin:0;
+    width: auto;
+    margin: 0
   }
 
   header, section, footer {
-    float:none;
-    position:static;
-    width:auto;
+    float: none;
+    position: static;
+    width: auto
   }
 
   header {
-    padding-right:320px;
+    padding-right: 320px
   }
 
   section {
-    border:1px solid rgba(0,0,0,.1);
-    border-width:1px 0;
-    padding:20px 0;
-    margin:0 0 20px;
+    border: 1px solid rgba(0, 0, 0, .1);
+    border-width: 1px 0;
+    padding: 20px 0;
+    margin: 0 0 20px
   }
 
   header a small {
-    display:inline;
+    display: inline
   }
 
   header ul {
-    position:absolute;
-    right:50px;
-    top:52px;
+    position: absolute;
+    right: 50px;
+    top: 52px
   }
+
 }
 
-@media print, screen and (max-width: 720px) {
+@media print, screen and (max-width:720px) {
   body {
-    word-wrap:break-word;
+    word-wrap: break-word
   }
 
   header {
-    padding:0;
+    padding: 0
   }
 
   header ul, header p.view {
-    position:static;
+    position: static
   }
 
   pre, code {
-    word-wrap:normal;
+    word-wrap: normal
   }
+
 }
 
-@media print, screen and (max-width: 480px) {
+@media print, screen and (max-width:480px) {
   body {
-    padding:15px;
+    padding: 15px
   }
 
   header ul {
-    display:none;
+    display: none
   }
+
 }
 
 @media print {
   body {
-    padding:0.4in;
-    font-size:12pt;
-    color:rgba(0,0,0,.8);
+    padding: 0.4in;
+    font-size: 12pt;
+    color: rgba(0, 0, 0, .8)
   }
+
+}
+
+.vocalizer {
+  font-size: 2.5em
+}
+
+.vocalizer::after {
+  margin: 4px -5px
+}
+
+.vocalizer:hover::after {
+  background-color: rgba(0, 0, 0, .8) !important
+}
+
+.vocalizer:active::after {
+  background-color: rgba(0, 0, 0, .8) !important
 }
