--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700');
+/*@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700');*/
+@import url('https://fonts.googleapis.com/css?family=PT+Sans:400:700');
 
 html {
 }
@@ -23,13 +24,12 @@ header {
 
 body {
   padding: 50px;
-  font-family: Open Sans, sans-serif;
+  font-family: PT Sans, sans-serif;
   font-size: .9rem;
   font-weight: 400;
-  letter-spacing: -0.002rem;
   font-style: normal;
   line-height: 1.58;
-  color: rgba(0, 0, 0, .8);
+  color: rgba(0, 0, 0, .85);
   -webkit-text-size-adjust: 100%;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -40,8 +40,16 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   margin: 0 0 20px;
+  font-family: PT Sans, sans-serif;
   font-weight: 700;
   font-size: 1.4rem
+}
+
+h4, h5, h6 {
+  margin: 0 0 0px;
+  font-weight: 700;
+  font-family: PT Sans, sans-serif;
+  font-size: .9rem;
 }
 
 p, ul, ol, table, pre, dl {
