--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -37,7 +37,7 @@ body {
   font-variant-numeric: proportional-nums
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3 {
   margin: 0 0 20px;
   font-family: PT Sans, sans-serif;
   font-weight: 700;
