--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -24,17 +24,19 @@ header {
 body {
   padding: 50px;
   font-family: PT Sans, sans-serif;
-  font-size: .9rem;
+  letter-spacing: -.001em;
+  font-size: 1rem;
   font-weight: 400;
   font-style: normal;
-  line-height: 1.58;
+  line-height: 1.58rem;
   color: rgba(0, 0, 0, .85);
   -webkit-text-size-adjust: 100%;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  -moz-font-feature-settings: "liga" on;
   text-rendering: optimizeLegibility;
   font-feature-settings: "pnum";
-  font-variant-numeric: proportional-nums
+  font-variant-numeric: proportional-nums;
 }
 
 h1, h2, h3 {
@@ -209,4 +211,3 @@ footer {
   }
 
 }
-
