--- a/stylesheets/voca.css
+++ b/stylesheets/voca.css
@@ -1,15 +1,1 @@
-.vocalizer {
-  font-size: 2.5em
-}
-
-.vocalizer::after {
-  margin: 4px -5px
-}
-
-.vocalizer:hover::after {
-  background-color: rgba(0, 0, 0, .8) !important
-}
-
-.vocalizer:active::after {
-  background-color: rgba(0, 0, 0, .8) !important
-}
+.vocalizer{font-size:2.5em}.vocalizer::after{margin:-3px -8px}.vocalizer:hover::after{background-color:rgba(0,0,0,.8)!important}.vocalizer:active::after{background-color:rgba(0,0,0,.8)!important}
