--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=PT+Sans:400:700');
+/*@import url('https://fonts.googleapis.com/css?family=PT+Sans:400:700');*/
+@import url('https://fonts.googleapis.com/css?family=Barlow:400:700');
 html {
 }
 
@@ -22,7 +23,7 @@ header {
 
 body {
   padding: 50px;
-  font-family: PT Sans, sans-serif;
+  font-family: Barlow, sans-serif;
   letter-spacing: -.001em;
   font-size: 1rem;
   font-weight: 400;
@@ -40,7 +41,7 @@ body {
 
 h1, h2, h3 {
   margin: 20px 0 20px;
-  font-family: PT Sans, sans-serif;
+  font-family: Barlow, sans-serif;
   font-weight: 700;
   font-size: 1.4rem
 }
@@ -48,7 +49,7 @@ h1, h2, h3 {
 h4, h5, h6 {
   margin: 0 0 0px;
   font-weight: 700;
-  font-family: PT Sans, sans-serif;
+  font-family: Barlow, sans-serif;
   font-size: 1rem;
 }
 
