--- a/stylesheets/2079.css
+++ b/stylesheets/2079.css
@@ -1,9 +1,10 @@
-@import url('https://fonts.googleapis.com/css?family=Rubik:100,300,400');
+@import url('https://fonts.googleapis.com/css?family=Rubik:300,400,500');
 
 html {
 }
 
 body {
+  font-family: 'Rubik', sans-serif;
   background: #16161d;
   font-size: 2.5rem;
   font-weight: 300;
@@ -11,18 +12,15 @@ body {
   letter-spacing: -.003em;
   -webkit-text-size-adjust: 100%;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -moz-font-feature-settings: "liga" on, "salt" on;
   text-rendering: optimizeLegibility;
-  font-feature-settings: "liga" on, "salt" on;
-  font-variant-numeric: proportional-nums;
+  -moz-osx-font-smoothing: grayscale;
+  -moz-font-feature-settings: "liga" on;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .hero {
-  font-family: 'Rubik', monospace;
   color: rgba(255, 255, 255, 1);
   padding-top: 10em;
 }
