--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,5 +1,13 @@
 /*@import url('https://fonts.googleapis.com/css?family=PT+Sans:400:700');*/
-@import url('https://fonts.googleapis.com/css?family=Barlow:400:700');
+/*@import url('https://fonts.googleapis.com/css?family=Barlow:400:700');*/
+@font-face {
+  font-family: Inter;
+  src: local("Inter"), local("Inter-Regular"), url("/fonts/inter/Inter-Regular.woff") format("woff");
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+}
+
 html {
 }
 
@@ -23,7 +31,8 @@ header {
 
 body {
   padding: 50px;
-  font-family: Barlow, sans-serif;
+  /*font-family: Barlow, sans-serif;*/
+  font-family: Inter,-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
   letter-spacing: -.001em;
   font-size: 1rem;
   font-weight: 400;
