--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,13 +1,4 @@
-/*@import url('https://fonts.googleapis.com/css?family=PT+Sans:400:700');*/
-/*@import url('https://fonts.googleapis.com/css?family=Barlow:400:700');*/
-@font-face {
-  font-family: Inter;
-  src: local("Inter"), local("Inter-Regular"), url("/fonts/inter/Inter-Regular.woff") format("woff");
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-}
-
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
 html {
 }
 
@@ -31,7 +22,6 @@ header {
 
 body {
   padding: 50px;
-  /*font-family: Barlow, sans-serif;*/
   font-family: Inter,-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
   letter-spacing: -.001em;
   font-size: 1rem;
@@ -50,7 +40,6 @@ body {
 
 h1, h2, h3 {
   margin: 20px 0 20px;
-  font-family: Barlow, sans-serif;
   font-weight: 700;
   font-size: 1.4rem
 }
@@ -58,7 +47,6 @@ h1, h2, h3 {
 h4, h5, h6 {
   margin: 0 0 0px;
   font-weight: 700;
-  font-family: Barlow, sans-serif;
   font-size: 1rem;
 }
 
